docs/api/qiskit/0.39/qiskit.pulse.instructions.Reference.mdx
---
title: Reference (v0.39)
description: API reference for qiskit.pulse.instructions.Reference in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.instructions.Reference
---

# Reference

<Class id="qiskit.pulse.instructions.Reference" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/pulse/instructions/reference.py" signature="Reference(name, *extra_keys)" modifiers="class">
  Bases: [`qiskit.pulse.instructions.instruction.Instruction`](pulse#qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")

  Pulse compiler directive that refers to a subroutine.

  If a pulse program uses the same subset of instructions multiple times, then using the [`Reference`](#qiskit.pulse.instructions.Reference "qiskit.pulse.instructions.Reference") class may significantly reduce the memory footprint of the program. This instruction only stores the set of strings to identify the subroutine.

  The actual pulse program can be stored in the `ScheduleBlock.references` of the [`ScheduleBlock`](qiskit.pulse.ScheduleBlock "qiskit.pulse.ScheduleBlock") that this reference instruction belongs to.

  You can later assign schedules with the `ScheduleBlock.assign_references()` method. This allows you to build the main program without knowing the actual subroutine, that is supplied at a later time.

  Create new reference.

  **Parameters**

  *   **name** (`str`) – Name of subroutine.
  *   **extra\_keys** (`str`) – Optional. A set of string keys that may be necessary to refer to a particular subroutine. For example, when we use “sx” as a name to refer to the subroutine of an sx pulse, this name might be used among schedules for different qubits. In this example, you may specify “q0” in the extra keys to distinguish the sx schedule for qubit 0 from others. The user can use an arbitrary number of extra string keys to uniquely determine the subroutine.

  ## Methods

  <span id="qiskit-pulse-instructions-reference-append" />

  ### append

  <Function id="qiskit.pulse.instructions.Reference.append" signature="Reference.append(schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted at the maximum time over all channels shared between `self` and `schedule`.

    **Parameters**

    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to be appended
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` a this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  <span id="qiskit-pulse-instructions-reference-ch-duration" />

  ### ch\_duration

  <Function id="qiskit.pulse.instructions.Reference.ch_duration" signature="Reference.ch_duration(*channels)">
    Return duration of the supplied channels in this Instruction.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="qiskit-pulse-instructions-reference-ch-start-time" />

  ### ch\_start\_time

  <Function id="qiskit.pulse.instructions.Reference.ch_start_time" signature="Reference.ch_start_time(*channels)">
    Return minimum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="qiskit-pulse-instructions-reference-ch-stop-time" />

  ### ch\_stop\_time

  <Function id="qiskit.pulse.instructions.Reference.ch_stop_time" signature="Reference.ch_stop_time(*channels)">
    Return maximum start time for supplied channels.

    **Parameters**

    **\*channels** – Supplied channels

    **Return type**

    `int`
  </Function>

  <span id="qiskit-pulse-instructions-reference-draw" />

  ### draw

  <Function id="qiskit.pulse.instructions.Reference.draw" signature="Reference.draw(dt=1, style=None, filename=None, interp_method=None, scale=1, plot_all=False, plot_range=None, interactive=False, table=True, label=False, framechange=True, channels=None)">
    Plot the instruction.

    **Parameters**

    *   **dt** (`float`) – Time interval of samples
    *   **style** (*Optional\[SchedStyle]*) – A style sheet to configure plot appearance
    *   **filename** (`Optional`\[`str`]) – Name required to save pulse image
    *   **interp\_method** (`Optional`\[`Callable`]) – A function for interpolation
    *   **scale** (`float`) – Relative visual scaling of waveform amplitudes
    *   **plot\_all** (`bool`) – Plot empty channels
    *   **plot\_range** (`Optional`\[`Tuple`\[`float`]]) – A tuple of time range to plot
    *   **interactive** (`bool`) – When set true show the circuit in a new window (this depends on the matplotlib backend being used supporting this)
    *   **table** (`bool`) – Draw event table for supported instructions
    *   **label** (`bool`) – Label individual instructions
    *   **framechange** (`bool`) – Add framechange indicators
    *   **channels** (`Optional`\[`List`\[[`Channel`](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel")]]) – A list of channel names to plot

    **Returns**

    A matplotlib figure object of the pulse schedule

    **Return type**

    matplotlib.figure
  </Function>

  <span id="qiskit-pulse-instructions-reference-insert" />

  ### insert

  <Function id="qiskit.pulse.instructions.Reference.insert" signature="Reference.insert(start_time, schedule, name=None)">
    Return a new [`Schedule`](qiskit.pulse.Schedule "qiskit.pulse.Schedule") with `schedule` inserted within `self` at `start_time`.

    **Parameters**

    *   **start\_time** (`int`) – Time to insert the schedule schedule
    *   **schedule** (*Union\['Schedule', 'Instruction']*) – Schedule or instruction to insert
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Returns**

    A new schedule with `schedule` inserted with this instruction at t=0.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  <span id="qiskit-pulse-instructions-reference-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.pulse.instructions.Reference.is_parameterized" signature="Reference.is_parameterized()">
    Return True iff the instruction is parameterized.

    **Return type**

    `bool`
  </Function>

  <span id="qiskit-pulse-instructions-reference-shift" />

  ### shift

  <Function id="qiskit.pulse.instructions.Reference.shift" signature="Reference.shift(time, name=None)">
    Return a new schedule shifted forward by time.

    **Parameters**

    *   **time** (`int`) – Time to shift by
    *   **name** (`Optional`\[`str`]) – Name of the new schedule. Defaults to name of self

    **Returns**

    The shifted schedule.

    **Return type**

    [Schedule](qiskit.pulse.Schedule "qiskit.pulse.Schedule")
  </Function>

  ## Attributes

  ### channels

  <Attribute id="qiskit.pulse.instructions.Reference.channels">
    Returns the channels that this schedule uses.

    **Return type**

    `Tuple`\[[`Channel`](pulse#qiskit.pulse.channels.Channel "qiskit.pulse.channels.Channel"), `...`]
  </Attribute>

  ### duration

  <Attribute id="qiskit.pulse.instructions.Reference.duration">
    Duration of this instruction.

    **Return type**

    `Union`\[`int`, [`ParameterExpression`](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")]
  </Attribute>

  ### id

  <Attribute id="qiskit.pulse.instructions.Reference.id">
    Unique identifier for this instruction.

    **Return type**

    `int`
  </Attribute>

  ### instructions

  <Attribute id="qiskit.pulse.instructions.Reference.instructions">
    Iterable for getting instructions from Schedule tree.

    **Return type**

    `Tuple`\[`Tuple`\[`int`, [`Instruction`](pulse#qiskit.pulse.instructions.Instruction "qiskit.pulse.instructions.instruction.Instruction")]]
  </Attribute>

  ### key\_delimiter

  <Attribute id="qiskit.pulse.instructions.Reference.key_delimiter" attributeValue="','" />

  ### name

  <Attribute id="qiskit.pulse.instructions.Reference.name">
    Name of this instruction.

    **Return type**

    `str`
  </Attribute>

  ### operands

  <Attribute id="qiskit.pulse.instructions.Reference.operands">
    Return instruction operands.

    **Return type**

    `Tuple`
  </Attribute>

  ### parameters

  <Attribute id="qiskit.pulse.instructions.Reference.parameters">
    Parameters which determine the instruction behavior.

    **Return type**

    `Set`
  </Attribute>

  ### ref\_keys

  <Attribute id="qiskit.pulse.instructions.Reference.ref_keys">
    Returns unique key of the subroutine.

    **Return type**

    `Tuple`\[`str`, `...`]
  </Attribute>

  ### scope\_delimiter

  <Attribute id="qiskit.pulse.instructions.Reference.scope_delimiter" attributeValue="'::'" />

  ### start\_time

  <Attribute id="qiskit.pulse.instructions.Reference.start_time">
    Relative begin time of this instruction.

    **Return type**

    `int`
  </Attribute>

  ### stop\_time

  <Attribute id="qiskit.pulse.instructions.Reference.stop_time">
    Relative end time of this instruction.

    **Return type**

    `int`
  </Attribute>
</Class>

